fix(css): add margin-right property to active table of contents link for better alignment

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -4757,6 +4757,7 @@ nav.table-of-contents .table-of-contents__link--active,
   height: auto !important;
   line-height: 1 !important;
   box-shadow: none !important;
+  margin-right: 0 !important
 }
 
 .DocSearch-Button-Placeholder {
